@@ -22,7 +22,7 @@ div.tablab {
 <tr>
 <td valign="top" align="center">
 	<div class="tablab">Generic counters</div>
-	<table class="mono bord" width="100%">
+	<table class="mono bord" width="100%" id="tab_gen">
 	<tr>
 		<th>Counter
 		<th>Value
@@ -32,7 +32,7 @@ div.tablab {
 </td>
 <td valign="top" align="center">
 	<div class="tablab">Transaction counters</div>
-	<table class="mono bord" width="100%">
+	<table class="mono bord" width="100%" id="tab_txs">
 	<tr>
 		<th>Counter
 		<th>Value
@@ -42,7 +42,7 @@ div.tablab {
 </td>
 <td valign="top" align="center">
 	<div class="tablab">Network counters</div>
-	<table class="mono bord" width="100%">
+	<table class="mono bord" width="100%" id="tab_net">
 	<tr>
 		<th rowspan="2">Network Message
 		<th colspan="2">Received
@@ -62,3 +62,90 @@ div.tablab {
 </td>
 </tr>
 </table>
+<script>
+function ref_counters() {
+	var aj = ajax()
+	aj.onerror=function() {
+		setTimeout(ref_counters, 10000)
+	}
+	aj.onload=function() {
+		try {
+			var i, cts = JSON.parse(aj.responseText)
+			//console.log(cts)
+
+			for (i=0; i<cts.gen.length; i++) {
+				var row
+				if (i < tab_gen.rows.length-1) {
+					row = tab_gen.rows[i+1]
+				} else {
+					row = tab_gen.insertRow(-1)
+					row.insertCell(-1)
+					row.insertCell(-1)
+					row.cells[0].className = 'gennam'
+					row.cells[1].className = 'genval'
+				}
+				row.cells[0].innerText = cts.gen[i].var
+				row.cells[1].innerText = cts.gen[i].cnt
+			}
+			while (tab_gen.rows.length > cts.gen.length + 1) {
+				tab_gen.deleteRow(tab_gen.rows.length-1)
+			}
+
+			while (tab_txs.rows.length>1) tab_txs.deleteRow(1)
+			for (i=0; i<cts.txs.length; i++) {
+				var row
+				if (i < tab_txs.rows.length-1) {
+					row = tab_txs.rows[i+1]
+				} else {
+					row = tab_txs.insertRow(-1)
+					row.insertCell(-1)
+					row.insertCell(-1)
+					row.cells[0].className = 'txsnam'
+					row.cells[1].className = 'txsval'
+				}
+				row.cells[0].innerText = cts.txs[i].var
+				row.cells[1].innerText = cts.txs[i].cnt
+			}
+
+			while (tab_net.rows.length>2) tab_net.deleteRow(2)
+			for (i=0; i<cts.net.length; i++) {
+				var row = tab_net.insertRow(-1)
+
+				var col = row.insertCell(-1)
+				col.className = 'netnam'
+				col.innerText = cts.net[i].var
+
+				col = row.insertCell(-1)
+				col.className = 'netcnt'
+				col.innerText = cts.net[i].rcvd
+
+				col = row.insertCell(-1)
+				col.className = 'netcnt'
+				col.innerText = cts.net[i].rbts
+
+				col = row.insertCell(-1)
+				col.className = 'netbts'
+				col.innerText = cts.net[i].sent
+
+				col = row.insertCell(-1)
+				col.className = 'netcnt'
+				col.innerText = cts.net[i].sbts
+
+				col = row.insertCell(-1)
+				col.className = 'netbts'
+				col.innerText = cts.net[i].hold
+
+				col = row.insertCell(-1)
+				col.className = 'netcnt'
+				col.innerText = cts.net[i].hbts
+			}
+		} catch(e) {
+			console.log("error", e)
+		}
+		setTimeout(ref_counters, 1000)
+	}
+	aj.open("GET","counts.json",true)
+	aj.send(null)
+}
+ref_counters()
+</script>
