@@ -3,6 +3,7 @@
 * Client: Added BIP100 stats to the mining UI
 * Wallet: Added support for Type-4 wallet, which is based on BIP-32 keys derivation (HD wallets)
 * Lib: Some changes to btc.WalletHD API
+* WebUI: Real time UI refresh (without reloading the pages)
 
 1.2.0 - 2015-07-31
 * Lib: enforce blocks version 3, starting from #364000
